--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vee-validate/zod": "^4.15.0",
+    "axios": "^1.8.4",
     "pinia": "^3.0.1",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
@@ -28,12 +32,16 @@
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
     "jsdom": "^26.0.0",
+    "json-server": "^1.0.0-beta.3",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.3",
     "prettier": "3.5.3",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
