Implement Product Management feature Add product page Add form for product creataion, updation and deletion Connect product components  with composables and API for dynamic data

--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "json-server": "json-server --watch db.json --port 3000"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.74.5",
     "@vee-validate/zod": "^4.15.0",
     "axios": "^1.8.4",
     "pinia": "^3.0.1",
